--- a/.gitignore
+++ b/.gitignore
@@ -1,27 +1,34 @@
-# CakePHP 3
-
-/vendor/*
-/config/app.php
-
-/tmp/cache/models/*
-!/tmp/cache/models/empty
-/tmp/cache/persistent/*
-!/tmp/cache/persistent/empty
-/tmp/cache/views/*
-!/tmp/cache/views/empty
-/tmp/sessions/*
-!/tmp/sessions/empty
-/tmp/tests/*
-!/tmp/tests/empty
-
-/logs/*
-!/logs/empty
-
 # CakePHP 2
 
-/app/tmp/*
+# Configuration Files
 /app/Config/core.php
 /app/Config/database.php
 /app/webroot/API/config.php
-/app/webroot/API/vendor/*
+
+# Dependencies
 /vendors/*
+
+# API Dependencies
+/app/webroot/API/vendor/*
+
+# Temp files
+/app/tmp/cache/models/*
+!/app/tmp/cache/models/empty
+/app/tmp/cache/persistent/*
+!/app/tmp/cache/persistent/empty
+/app/tmp/cache/views/*
+!/app/tmp/cache/views/empty
+/app/tmp/sessions/*
+!/app/tmp/sessions/empty
+/app/tmp/tests/*
+!/app/tmp/tests/empty
+
+# Logs
+/app/log/*
+!/app/log/empty
+
+# Invoices
+/app/invoices/out/*
+!/app/invoices/out/empty
+/app/invoices/sent/*
+!/app/invoices/sent/empty
