--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,7 @@
 !/app/invoices/out/empty
 /app/invoices/sent/*
 !/app/invoices/sent/empty
+
+# Upload files
+app/webroot/uploads/*
+!app/webroot/uploads/empty
